--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,7 +16,7 @@ jobs:
       # Checkout del repositorio
       - uses: actions/checkout@v4
         with:
-          fetch-depth: 0  # Deshabilita clones superficiales para mejor análisis
+          fetch-depth: 0
 
       # Configuración de Java
       - name: Set up JDK 17
@@ -41,6 +41,10 @@ jobs:
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-m2
 
+      # Detectar nombre de la rama
+      - name: Set branch name
+        run: echo "GITHUB_REF_NAME=${GITHUB_REF#refs/heads/}" >> $GITHUB_ENV
+
       # Build del proyecto con Jacoco
       - name: Build
         run: mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install org.jacoco:jacoco-maven-plugin:report
@@ -49,4 +53,4 @@ jobs:
       - name: SonarCloud Analysis
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: mvn sonar:sonar -Dsonar.login=$SONAR_TOKEN
+        run: mvn sonar:sonar -Dsonar.login=$SONAR_TOKEN -Dsonar.branch.name=$GITHUB_REF_NAME
