--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -53,4 +53,7 @@ jobs:
       - name: SonarCloud Analysis
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: mvn sonar:sonar -Dsonar.login=$SONAR_TOKEN -Dsonar.branch.name=$GITHUB_REF_NAME
+		  run: mvn sonar:sonar \
+		    -Dsonar.login=$SONAR_TOKEN \
+		    -Dsonar.branch.name=$GITHUB_REF_NAME \
+		    -Dsonar.branch.target=main
