--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -49,11 +49,13 @@ jobs:
       - name: Build
         run: mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install org.jacoco:jacoco-maven-plugin:report
 
-      # Análisis con SonarCloud
-      - name: SonarCloud Analysis
-        env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: mvn sonar:sonar \
-          -Dsonar.login=$SONAR_TOKEN \
-          -Dsonar.branch.name=$GITHUB_REF_NAME \
-          -Dsonar.branch.target=main
+		# Análisis con SonarCloud
+		- name: SonarCloud Analysis
+		  env:
+		    SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+		  run: |
+		    mvn sonar:sonar \
+		      -Dsonar.login=$SONAR_TOKEN \
+		      -Dsonar.branch.name=$GITHUB_REF_NAME \
+		      -Dsonar.branch.target=main
+
