--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
@@ -40,10 +41,12 @@ jobs:
       - name: Set branch name
         run: echo "GITHUB_REF_NAME=${GITHUB_REF#refs/heads/}" >> $GITHUB_ENV
 
-      - name: Build
+      - name: Build with Jacoco
         run: mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install org.jacoco:jacoco-maven-plugin:report
 
       - name: SonarCloud Analysis
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: mvn sonar:sonar -Dsonar.token=$SONAR_TOKEN -Dsonar.branch.name=$GITHUB_REF_NAME -Dsonar.branch.target=main
+        run: mvn sonar:sonar \
+          -Dsonar.login=$SONAR_TOKEN \
+          -Dsonar.branch.name=main
