--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,4 +46,4 @@ jobs:
       - name: SonarCloud Analysis
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: mvn sonar:sonar -Dsonar.login=$SONAR_TOKEN -Dsonar.projectKey=asieraldai_rides25-si2 -Dsonar.organization=asieraldai -Dsonar.host.url=https://sonarcloud.io -Dsonar.branch.name=main -Dsonar.branch.target=main
+        run: mvn sonar:sonar -Dsonar.login=$SONAR_TOKEN -Dsonar.projectKey=asieraldai_rides25-si2 -Dsonar.organization=asieraldai -Dsonar.host.url=https://sonarcloud.io -Dsonar.branch.name=master -Dsonar.branch.target=master
